  explanation.

 * examples/pbsmon.py. Patched so it also works for torque 2.5
   Author: Stijn De Weirdt stijn dot deweirdt at ugent dot be
   Applied by: Bas van der Vlies

 * setup.py.in changed determine which torque version is installed
   so we also support snapshots.
   Author: Mark Roberts ( mark at gingergeeks dot co dot uk)
   Applied by: Bas van der Vlies

=========== 4.1.2
 * examples/new_rack_pbsmon.py now uses the new PBSQuery data 
   structure.
   Author: Bas van der Vlies

 * PBSQuery:
     - fixed and error in get_jobs function for nodes. Did not
       support new data structure and uniq did not work.
       Authors: Shunjie Lau <eijnuhs at gmail dot com> and Bas van der Vlies

=========== 4.1.0
 * Delete function pbs.version() replaced by
    * pbs.version 
        This is a string variable
    * pbs.version_info
        Is a tuple variable. So we can use it in scripts

   This analogue with sys module, closes #20

   Requested by: Dennis Stam ( Dennis dot Stam add sara dot nl )
   Author: Bas van der Vlies

 * More robust make/configure/setup.py
   Reported by: 
   	- Saidi, Yacine <saidi add linmpi dot mpg dot de> 
	- Shunjie Lau <eijnuhs add gmail dot com> 
   Author: Bas van der Vlies


 * Only use the pbs_wrap.c and pbs.py 2.4 version for torque version 2.4.7 and higher. 
   Reported by: Saidi, Yacine <saidi add linmpi dot mpg dot de> 
   Author: Bas van der Vlies
   
=========== 4.0.2
  * Quick fix so we do not get any undefined symbols. Forgot to
    add the torque library when we compile the package.
    Reported by: Shunjie Lau ( eijnuhs add gmail dot com)
    Author: Bas van der Vlies

=========== 4.0.1
  * Fixed a bug in setting the right library path  for compiling.
    Reported by: Chad Vizino ( vizino add psc dot edu )
    Author: Bas van der Vlies
   
=========== 4.0.0
  * pbs.py added some new functions for 2.4 version:
    - pbs_fbserver(void);
    - pbs_get_server_list(void);